# numba

./: .gitignore  README.rst  demo.md  demo.py  setup.py
mlir-compiler/: CMakeLists.txt  dialect.cpp  llvm-sha.txt  lowering.cpp  lowering.hpp  module.cpp  readme.md  test.py  type_parser.cpp  type_parser.hpp
mlir-compiler/include/plier/: PlierOps.td  dialect.hpp
mlir-compiler/plier/: CMakeLists.txt
mlir-compiler/src/: compiler.cpp  compiler.hpp  dialect.cpp  lowering.cpp  lowering.hpp  module.cpp  pipeline_registry.cpp  pipeline_registry.hpp  py_func_resolver.cpp  py_func_resolver.hpp  py_linalg_resolver.cpp  py_module.cpp  type_parser.hpp  utils.cpp  utils.hpp
mlir-compiler/src/passes/: base_pipeline.cpp  base_pipeline.hpp  lower_to_llvm.cpp  lower_to_llvm.hpp  pass_registry.cpp  pass_registry.hpp  plier_to_linalg.cpp  plier_to_std.cpp  plier_to_std.hpp
mlir-compiler/src/pipelines/: base_pipeline.cpp  base_pipeline.hpp  lower_to_llvm.cpp  parallel_to_tbb.cpp  parallel_to_tbb.hpp  plier_to_linalg.cpp  plier_to_linalg.hpp  plier_to_std.cpp  plier_to_std.hpp
mlir-compiler/src/rewrites/: call_lowering.cpp  call_lowering.hpp  canonicalize_reductions.cpp  canonicalize_reductions.hpp  cast_lowering.cpp  cast_lowering.hpp  cse.cpp  cse.hpp  force_inline.cpp  force_inline.hpp  func_signature_conversion.cpp  func_signature_conversion.hpp  index_type_propagation.cpp  index_type_propagation.hpp  loop_rewrites.cpp  loop_rewrites.hpp  promote_to_parallel.cpp  promote_to_parallel.hpp  type_conversion.cpp  type_conversion.hpp
mlir-compiler/src/transforms/: cast_utils.cpp  cast_utils.hpp  const_utils.cpp  const_utils.hpp  func_utils.cpp  func_utils.hpp  loop_utils.cpp  loop_utils.hpp  pipeline_utils.cpp  pipeline_utils.hpp
numba/: _typeof.c
numba/core/: base.py  cgutils.py  codegen.py  compiler.py  cpu.py  debuginfo.py  decorators.py  dispatcher.py  extending.py  ir_utils.py  lowering.py  pythonapi.py  registry.py  transforms.py  typed_passes.py
numba/core/runtime/: _nrt_python.c  nrt.c  nrt.h
numba/core/types/: common.py  npytypes.py
numba/core/typing/: context.py  npydecl.py
numba/dppl/: dparray.py  dppl_rt.c  gpu_dispatcher.py  withcontexts.py
numba/dppl/tests/dppl/: test_dparray.py  test_ufuncs.py  test_with_semantics.py
numba/np/: arrayobj.py
numba/np/ufunc/: parallel.py  tbbpool.cpp
numba/parfors/: parfor.py  parfor_lowering.py
numba/testing/: main.py
numba/tests/: __init__.py  test_dispatcher.py  test_nrt.py  test_record_dtype.py  test_serialize.py  test_types.py
numba/typed/: typedlist.py
